gccida/c0/do_jump_by_parts_equality_rtx
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10310:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode; // [rsp+38h] [rbp-48h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10325:32: error: invalid suffix 'xmode' on integer constant
part = gen_reg_rtx( *(short *)0xmode); 
                               ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10326:30: error: invalid suffix 'orce' on integer constant
v4 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10326:46: error: use of undeclared identifier 'machine_mode'
v4 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10326:61: error: expected expression
v4 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10326:6: error: use of undeclared identifier 'operand_sub'
v4 = operand_sub*(short *)0xforce( op0, 0, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10335:19: error: invalid suffix 'xmode' on integer constant
mode = *(short *)0xmode; 
                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10337:30: error: invalid suffix 'orce' on integer constant
v5 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10337:46: error: use of undeclared identifier 'machine_mode'
v5 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10337:61: error: expected expression
v5 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                                                            ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10337:6: error: use of undeclared identifier 'operand_sub'
v5 = operand_sub*(short *)0xforce( op0, i, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10342:69: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( part, const_int_rtx[64], EQ, 1, *(short *)0xmode, 0LL, if_false_label, if_true_label); 
                                                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10353:30: error: invalid suffix 'orce' on integer constant
v6 = operand_sub*(short *)0xforce( op0, ia, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10353:47: error: use of undeclared identifier 'machine_mode'
v6 = operand_sub*(short *)0xforce( op0, ia, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                                              ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10353:62: error: expected expression
v6 = operand_sub*(short *)0xforce( op0, ia, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
                                                             ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10353:6: error: use of undeclared identifier 'operand_sub'
v6 = operand_sub*(short *)0xforce( op0, ia, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op0)); 
     ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/expr.c:10354:67: error: invalid suffix 'xmode' on integer constant
do_compare_rtx_and_jump( v6, const_int_rtx[64], EQ, 1, *(short *)0xmode, 0LL, if_false_labela, 0LL); 
                                                                  ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/do_jump_by_parts_equality_rtx/src/obj/expr.o] Error 1
